// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<div
  className="navbar-context-branches dropdown"
>
  <a
    className="link-base-color link-no-underline"
    href="#"
    onClick={[Function]}
  >
    <BranchIcon
      branchLike={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    <Tooltip
      mouseEnterDelay={1}
      overlay="master"
      placement="bottom"
    >
      <span
        className="text-limited text-top"
      >
        master
      </span>
    </Tooltip>
    <i
      className="icon-dropdown little-spacer-left"
    />
  </a>
</div>
`;

exports[`renders no branch support popup 1`] = `
<div
  className="navbar-context-branches"
>
  <BranchIcon
    branchLike={
      Object {
        "isMain": true,
        "name": "master",
      }
    }
    className="little-spacer-right"
    fill="#cdcdcd"
  />
  <span
    className="note"
  >
    master
  </span>
  <div
    className="display-inline-block spacer-left"
  >
    <a
      className="link-no-underline"
      href="#"
      onClick={[Function]}
    >
      <HelpIcon
        fill="#cdcdcd"
      />
    </a>
    <BubblePopupHelper
      isOpen={false}
      popup={<NoBranchSupportPopup />}
      position="bottomleft"
      togglePopup={[Function]}
    />
  </div>
</div>
`;

exports[`renders pull request 1`] = `
<div
  className="navbar-context-branches dropdown"
>
  <a
    className="link-base-color link-no-underline"
    href="#"
    onClick={[Function]}
  >
    <BranchIcon
      branchLike={
        Object {
          "base": "master",
          "branch": "feature",
          "id": "1234",
          "title": "Feature PR",
          "url": "https://example.com/pull/1234",
        }
      }
      className="little-spacer-right"
    />
    <Tooltip
      mouseEnterDelay={1}
      overlay="1234 – Feature PR"
      placement="bottom"
    >
      <span
        className="text-limited text-top"
      >
        1234 – Feature PR
      </span>
    </Tooltip>
    <i
      className="icon-dropdown little-spacer-left"
    />
  </a>
  <span
    className="note big-spacer-left text-lowercase"
  >
    <FormattedMessage
      defaultMessage="branches.pull_request.for_merge_into_x_from_y"
      id="branches.pull_request.for_merge_into_x_from_y"
      values={
        Object {
          "base": <strong>
            master
          </strong>,
          "branch": <strong>
            feature
          </strong>,
        }
      }
    />
  </span>
</div>
`;

exports[`renders short-living branch 1`] = `
<div
  className="navbar-context-branches dropdown"
>
  <a
    className="link-base-color link-no-underline"
    href="#"
    onClick={[Function]}
  >
    <BranchIcon
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "foo",
          "status": Object {
            "bugs": 0,
            "codeSmells": 0,
            "vulnerabilities": 0,
          },
          "type": "SHORT",
        }
      }
      className="little-spacer-right"
    />
    <Tooltip
      mouseEnterDelay={1}
      overlay="foo"
      placement="bottom"
    >
      <span
        className="text-limited text-top"
      >
        foo
      </span>
    </Tooltip>
    <i
      className="icon-dropdown little-spacer-left"
    />
  </a>
  <span
    className="note big-spacer-left text-lowercase"
  >
    from
     
    <strong>
      master
    </strong>
  </span>
</div>
`;

exports[`renders single branch popup 1`] = `
<div
  className="navbar-context-branches"
>
  <BranchIcon
    branchLike={
      Object {
        "isMain": true,
        "name": "master",
      }
    }
    className="little-spacer-right"
  />
  <span
    className="note"
  >
    master
  </span>
  <div
    className="display-inline-block spacer-left"
  >
    <a
      className="link-no-underline"
      href="#"
      onClick={[Function]}
    >
      <HelpIcon
        fill="#4b9fd5"
      />
    </a>
    <BubblePopupHelper
      isOpen={false}
      popup={<SingleBranchHelperPopup />}
      position="bottomleft"
      togglePopup={[Function]}
    />
  </div>
</div>
`;
